# ralph-tui

./: .gitignore  pyproject.toml
ralph_tui/: __init__.py  __main__.py  analyzer.py  app.py  config.py  error_handling.py  orchestrator.py  rate_limit.py
ralph_tui/screens/: __init__.py  config_screen.py  runner_screen.py
tests/: smoke_test_e2e.py  test_analyzer.py  test_config.py  test_e2e_full.py  test_e2e_three_prompt.py  test_e2e_user_flow.py  test_effective_iterations.py  test_error_handling.py  test_heartbeat.py  test_orchestrator.py  test_rate_limit.py  test_runner_screen.py  test_streaming.py
tests/real_pty/: drive.py  feat1_plan_usage.py  feat2_fill.py  feat3_scroll.py  feat4_timer.py
tests/real_pty/captures/: fill_w120.txt  fill_w200.txt  fill_w80.txt  plan_usage_resumed.txt  plan_usage_t05.txt  plan_usage_t10.txt  plan_usage_t15.txt  plan_usage_t20.txt  plan_usage_t25.txt  plan_usage_t30.txt  plan_usage_t35.txt  scroll_after_more_text_w120.txt  scroll_initial_w120.txt  scroll_paged_up_w120.txt  scroll_returned_w120.txt  timer_post_tool_idle_w120.txt  timer_t05_w120.txt  timer_t10_w120.txt  timer_t15_w120.txt  timer_t20_w120.txt  timer_t25_w120.txt  timer_t30_w120.txt  timer_t35_w120.txt
tests/smoke_fixtures/: long_tool.py  plan1_implement.md  plan1_test.md  plan2_implement.md  plan2_test.md  plan_usage_limit.py  plan_usage_limit_tui.py  tui_smoke.py
